cmake_minimum_required(VERSION 3.0.2)

include_directories(../include)
include_directories(./hacl)

set(CMAKE_C_COMPILER clang)
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fsanitize=fuzzer,address")
find_package(GMP QUIET)

add_custom_target(fuzz_hacl)
file(GLOB FUZZ_HACL_SOURCES ./hacl_*.c)
foreach (file ${FUZZ_HACL_SOURCES})
	get_filename_component(tmp_name ${file} NAME_WE)
	add_executable(fuzz_${tmp_name} EXCLUDE_FROM_ALL ${file} ./hacl/Hacl_Curve25519.c)
	target_link_libraries(fuzz_${tmp_name} ${TARGET})
	add_dependencies(fuzz_hacl fuzz_${tmp_name})
endforeach (file ${FUZZ_HACL_SOURCES})

add_custom_target(fuzz_gmp)
file(GLOB FUZZ_GMP_SOURCES ./gmp_*.c)
foreach (file ${FUZZ_GMP_SOURCES})
	get_filename_component(tmp_name ${file} NAME_WE)
	add_executable(fuzz_${tmp_name} EXCLUDE_FROM_ALL ${file})
	target_link_libraries(fuzz_${tmp_name} ${TARGET} gmp)
	add_dependencies(fuzz_gmp fuzz_${tmp_name})
endforeach (file ${FUZZ_GMP_SOURCES})

add_custom_target(fuzz)
add_dependencies(fuzz fuzz_hacl fuzz_gmp)
set_target_properties(fuzz PROPERTIES EXCLUDE_FROM_ALL true)
